# numidium

./: .flake8  .gitignore  build.bat  install.bat  mkdocs.yml  numidium.bat  numidium.spec  pyproject.toml
docs/: index.md  modules.md  widgets.md
numidium/: __main__.py  config.py  logger.py
numidium/core/: extension_handler.py  extensions.py
numidium/core/tests/: test_extensions.py
numidium/extensions/debug_menu/: README.md  __init__.py  icon_browser.py  pyproject.toml  widget_gallery.py
numidium/extensions/example/: README.md  __init__.py  pyproject.toml
numidium/extensions/example_custom_activity/: README.md  __init__.py  pyproject.toml
numidium/extensions/example_image_viewer/: README.md  __init__.py  pyproject.toml
numidium/extensions/screenshots/: README.md  __init__.py  pyproject.toml
numidium/tes3/: __init__.py  _tes3.pyd  typing.py
numidium/tes3/core/: __init__.py
numidium/tes3/dds/: __init__.py  _dds.pyd
numidium/tes3/esp/: __init__.py  activator.py  aidata.py  aipackage.py  alchemy.py  apparatus.py  armor.py  bipedobject.py  birthsign.py  bodypart.py  book.py  cell.py  class_.py  clothing.py  container.py  creature.py  dialogue.py  door.py  effect.py  enchantment.py  enums.py  faction.py  gamesetting.py  globalvariable.py  header.py  info.py  ingredient.py  landscape.py  landscapetexture.py  levelledcreature.py  levelleditem.py  light.py  lockpick.py  magiceffect.py  miscitem.py  npc.py  object.py  pathgrid.py  plugin.py  probe.py  (+12 more)
numidium/tes3/ini/: __init__.py
numidium/tes3/tests/: test_ini.py  test_tes3.py
numidium/tes3/tests/assets/: Morrowind.ini
numidium/ui/: __init__.py  activity_bar.py  application.py  console.py  content_browser_dock.py  editordock.py  enums.py  explorer.py  extensions_dock.py  menu_bar.py  mods_dock.py  modsdock.py  settings_dock.py  settingsdock.py  signals.py  state.py  utility.py  viewer.py  widgets.py
numidium/ui/windows/: about.py  abstractmain.py  application.py  debug.py  main_window.py  manager.py  welcome.py
tests/: test_config.py  test_tes3.py
tests/assets/: test.esp
tests/ui/: conftest.py  test_main_window.py
tools/: build.bat  install.bat  numidium.bat
