[tool.poetry]
name = "numidium"
version = "0.1.0"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>", "OperatorJack <ThePaladinOf@gmail.com>"]

[tool.poetry.dependencies]
loguru = "^0.5.3"
platformdirs = "^2.4.1"
pyqtdarktheme = "^1.0.2"
PySide6 = "^6.2.2"
python = ">=3.10,<3.11"
tomlkit = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mkdocs = "^1.2.3"
mkdocs-awesome-pages-plugin = "^2.6.1"
mkdocs-material = "^8.1.7"
mkdocstrings = "^0.17.0"
mypy = "^0.931"
pyinstaller = "^4.8"
pytest = "^6.2.5"
pytkdocs = { git = "https://github.com/Greatness7/pytkdocs.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.mypy]
# Some settings have been tweaked to be more/less strict
# https://mypy.readthedocs.io/en/stable/config_file.html

# Section: Import Discovery
exclude = ["venv/"] # default: []
namespace_packages = true # default: false
explicit_package_bases = true # default: false
follow_imports = "normal" # default: "normal"

# Section: Disallow Dynamic Typing
disallow_any_unimported = true # default: false
disallow_any_expr = false # default: false
disallow_any_decorated = false # default: false
disallow_any_explicit = false # default: false
disallow_any_generics = true # default: false
disallow_subclassing_any = true # default: false

# Section: Untyped Definitions And Calls
disallow_untyped_calls = true # default: false
disallow_untyped_defs = true # default: false
disallow_incomplete_defs = true # default: false
check_untyped_defs = true # default: false
disallow_untyped_decorators = true # default: false

# Section: None And Optional Handling
no_implicit_optional = true # default: false
strict_optional = true # default: true

# Section: Suppressing Errors
show_none_errors = true # default: true
ignore_errors = false # default: false

# Section: Configuring Warnings
warn_redundant_casts = true # default: false
warn_unused_ignores = true # default: false
warn_no_return = true # default: true
warn_return_any = true # default: false
warn_unreachable = true # default: false

# Section: Miscellaneous Strictness Flags
allow_untyped_globals = true # default: false
allow_redefinition = true # default: false
local_partial_types = false # default: false
disable_error_code = [] # default: []
implicit_reexport = true # default: true
strict_equality = true # default: false
strict = false # default: false

# Section: Configuring error messages
show_error_context = true # default: false
show_column_numbers = true # default: false
show_error_codes = true # default: false
pretty = true # default: false
color_output = true # default: true
error_summary = true # default: true
show_absolute_path = true # default: false

[[tool.mypy.overrides]]
module = [
    "numidium.ui.content_browser_dock",
    "numidium.ui.settings_dock",
    "numidium.ui.windows.*",
    "numidium.ui.explorer",
]
ignore_errors = true
