[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "numidium"
version = "0.1.0"
description = ""
authors = ["Greatness7 <Greatness7@gmail.com>", "OperatorJack <ThePaladinOf@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
loguru = "^0.5.3"
platformdirs = "^2.5.0"
PySide6 = "^6.2.3"
tomlkit = "^0.8.0"
qtvscodestyle = { git = "https://github.com/Greatness7/QtVSCodeStyle.git", branch = "main" }

[tool.poetry.dev-dependencies]
black = "^22.1.0"
docformatter = "^1.4"
isort = "^5.10.1"
mkdocs = "^1.2.3"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-material = "^8.1.11"
mkdocstrings = "^0.17.0"
mypy = "^0.931"
pytest = "^6.2.5"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310"]
line-length = 120

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
exclude = ["venv/"]
allow_redefinition = true
allow_untyped_globals = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = []
ignore_errors = true
